Don't invoke up/down caster with null arguments
I.e. after a message has been dropped don't invoke other casters anymore.